2008-05-15  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-interp.c (syx_interp_enter_context): do not really switch the process
	(_syx_interp_state_update): checks must be done before calling the method
	(_syx_interp_switch_process): checks must be done before calling the method
	(syx_interp_swap_context):
	(syx_process_execute_scheduled): checks have to be done before calling the method

	* syx/syx-memory.c (_syx_memory_write_process_stack): fixed warnings

	* syx/syx-interp.h: add missing interp functions

	* syx/syx-interp.c (_syx_interp_execute_byte): remove rarely used branch
	(syx_interp_do_extended): added
	(syx_interp_mark_arguments):

2008-05-10  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-memory.c (_syx_memory_write_process_stack): store stack if the first frames are detached
        (_syx_memory_write_process_stack): check if the stack has been already wrote
        (_syx_memory_read): read first detached frames
        (syx_memory_load_image): first fix pointers

        * syx/syx-types.h:

2008-05-06  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-interp.c (syx_interp_context_to_frame): add check

        * syx/syx-memory.c (_syx_memory_write_frame): save all the stack from locals to the upper frame
        (_syx_memory_read_lazy_pointer): missing big endian compatibility, rename idx to data
        (_syx_memory_write_lazy_pointer): give precedence to detached frames

2008-05-04  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-memory.c (_syx_memory_write_frame): receiver is not only an object
        (_syx_memory_read_process_stack): 

        * syx/syx-scheduler.c (syx_scheduler_add_process): run the given process just after the active process
        (syx_scheduler_init): set default timeslice to 100

        * syx/syx-memory.c (enum): rename _BOS to _BOF
        All calls have been updated.

2008-05-02  Luca Bruno  <lethalman88@gmail.com>

        * syx/syx-memory.c (syx_memory_save_image): unmark the object being skipped